# testpackages

./: no-datatype-match-pkgs.csv
fuzzedpackages/AnaCoDa/: DESCRIPTION  cleanup  configure.ac
fuzzedpackages/AnaCoDa/R/: RcppExports.R  modelObject.R  parameterObject.R  plotMCMCAlgorithmObject.R  plotModelObject.R  traceObject.R
fuzzedpackages/AnaCoDa/man/: AAToCodon.Rd  acfCSP.Rd  acfMCMC.Rd  addObservedSynthesisRateSet.Rd  codons.Rd  convergence.test.Rd  findOptimalCodon.Rd  fixDM.Rd  getAdaptiveWidth.Rd  getCAI.Rd  getCodonCounts.Rd  getCodonCountsForAA.Rd  getCodonSpecificPosteriorVarianceForCodon.Rd  getEstimatedMixtureAssignmentProbabilitiesForGene.Rd  getExpressionEstimates.Rd  getGroupList.Rd  getLogPosteriorMean.Rd  getMixtureAssignmentEstimate.Rd  getNcAA.Rd  getNoiseOffsetPosteriorMean.Rd  getObservedSynthesisRateSet.Rd  getSamples.Rd  getSelectionCoefficients.Rd  getStdDevSynthesisRateVariance.Rd  getSynthesisRatePosteriorMeanForGene.Rd  getSynthesisRatePosteriorVarianceForGene.Rd  getTrace.Rd  getTraceObject.Rd  initMutationCategories.Rd  initializeGenomeObject.Rd  initializeModelObject.Rd  initializeSynthesisRateByGenome.Rd  initializeSynthesisRateByList.Rd  length.Rcpp_Genome.Rd  loadParameterObject.Rd  plot.Rcpp_Trace.Rd  setAdaptiveWidth.Rd  setRestartSettings.Rd  setSamples.Rd  setStepsToAdapt.Rd  (+2 more)
fuzzedpackages/AnaCoDa/src/: CodonTable.cpp  CovarianceMatrix.cpp  FONSEModel.cpp  FONSEParameter.cpp  Gene.cpp  Makevars.in  Model.cpp  PANSEModel.cpp  Parameter.cpp  RCPP_Model.cpp  RCPP_Parameter.cpp  RCPP_Trace.cpp  ROCParameter.cpp  SequenceSummary.cpp  Testing.cpp  Trace.cpp  registerDynamicSymbol.c
fuzzedpackages/AnaCoDa/tests/: testthat.R
fuzzedpackages/AnaCoDa/vignettes/: anacoda.Rmd  anacoda.bib
fuzzedpackages/Bayesrel/: DESCRIPTION  MD5  NAMESPACE  README.md  cleanup  config.status  configure  configure.ac
fuzzedpackages/Bayesrel/R/: Bayes_singletest_rel.R  RcppExports.R  boot_apply_functions.R  cov_sampler.R  freq_nonparametric.R  freq_parametric.R  generic_functions.R  gibbs_output.R  glb_funs.R  help_funs.R  max_split_half.R  omega_fit.R  omega_freq.R  omega_gibbs_sampler.R  princ_fac.R  prob_strel.R  samplePrior.R
fuzzedpackages/Bayesrel/data/: asrm.rda  asrm_mis.rda  cavalini.rda
fuzzedpackages/Bayesrel/inst/: REFERENCES.bib
fuzzedpackages/Bayesrel/man/: asrm.Rd  asrm_mis.Rd  cavalini.Rd  omega_fit.Rd  p_strel.Rd  strel.Rd
fuzzedpackages/Bayesrel/src/: BayesrelCpp.cpp  LowBoundsCpp.cpp  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  convertCpp.cpp  customsdp.h  customsdpCpp.cpp  initArma.cpp  pfaCpp.cpp
fuzzedpackages/Bayesrel/tests/: testthat.R
fuzzedpackages/Rmixmod/: DESCRIPTION  MD5  cleanup  configure  configure.ac
fuzzedpackages/Rmixmod/R/: A_NAMESPACE.R  CompositeModel.R  CompositeParameter.R  GaussianModel.R  GaussianParameter.R  Mixmod.R  MixmodCluster.R  MixmodDAResults.R  MixmodLearn.R  MixmodPredict.R  MixmodResults.R  MixmodXml.R  Model.R  MultinomialModel.R  MultinomialParameter.R  Parameter.R  Rmixmod.R  Strategy.R  global.R  zzz.R
fuzzedpackages/Rmixmod/man/: CompositeModel-class.Rd  CompositeParameter-class.Rd  GaussianModel-class.Rd  GaussianParameter-class.Rd  Mixmod-class.Rd  MixmodCluster-class.Rd  MixmodDAResults-class.Rd  MixmodLearn-class.Rd  MixmodPredict-class.Rd  MixmodResults-class.Rd  MixmodXmlCheck-class.Rd  MixmodXmlInput-class.Rd  Model-class.Rd  MultinomialModel-class.Rd  MultinomialParameter-class.Rd  Parameter-class.Rd  Rmixmod-package.Rd  Strategy-class.Rd  asQualitative.Rd  barplot-methods.Rd  barplotCluster.Rd  birds.Rd  car.Rd  clusteringMain.Rd  composeModelName.Rd  ellipse.Rd  extract-methods.Rd  finance.Rd  geyser.Rd  heterodata.Rd  heterodatatest.Rd  heterodatatrain.Rd  hist-methods.Rd  histCluster.Rd  initialize-methods.Rd  is.dataType.Rd  is.wholenumber.Rd  isQualitative.Rd  learnMain.Rd  matrix2binary.Rd  (+23 more)
fuzzedpackages/Rmixmod/src/: ClusteringInputHandling.cpp  ClusteringInputHandling.h  ClusteringOutputHandling.cpp  ClusteringOutputHandling.h  Conversion.cpp  Conversion.h  InputHandling.cpp  InputHandling.h  LearnOutputHandling.cpp  LearnOutputHandling.h  Makevars.in  Makevars.win  OutputHandling.cpp  OutputHandling.h  Rmixmod_init.c  clusteringMain.cpp  learnMain.cpp  predictMain.cpp  xMain.cpp
fuzzedpackages/Rmixmod/tests/: heterogeneousDAtest.R
fuzzedpackages/SplitReg/: DESCRIPTION  MD5  NAMESPACE  NEWS  README.md  cleanup  config.status  configure  configure.ac  configure.win
fuzzedpackages/SplitReg/R/: RcppExports.R  SplitReg_R.R  methods.R
fuzzedpackages/SplitReg/man/: coef.cv.SplitReg.Rd  cv.SplitReg.Rd  predict.cv.SplitReg.Rd
fuzzedpackages/SplitReg/src/: Makevars  Makevars.win  RcppExports.cpp  SplitReg.cpp  autoconfig.h  autoconfig.h.in  autoconfig.win.h  config.h
fuzzedpackages/SplitReg/tests/: testthat.R
fuzzedpackages/XBRL/: DESCRIPTION  MD5  configure  configure.in
fuzzedpackages/XBRL/R/: xbrlDoAll.R  xbrlGetLinkbaseNames.R  xbrlGetSchemaName.R  xbrlParse.R  xbrlProcessArcs.R  xbrlProcessContexts.R  xbrlProcessElements.R  xbrlProcessFacts.R  xbrlProcessFootnotes.R  xbrlProcessLabels.R  xbrlProcessRoles.R  xbrlSECdev01.R
fuzzedpackages/XBRL/man/: XBRL-package.Rd  XBRL.Rd  low-level.Rd  xbrlDoAll.Rd  xbrlSECdev01.Rd
fuzzedpackages/XBRL/src/: Makevars.in  (+8 more)
fuzzedpackages/datasailr/: DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md  config.status  configure  configure.ac  configure.win
fuzzedpackages/dfmta/: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
fuzzedpackages/fRLR/: DESCRIPTION  MD5  NAMESPACE  config.status  configure  configure.ac
fuzzedpackages/gaselect/: ChangeLog  DESCRIPTION  MD5  NAMESPACE  README.md  cleanup  configure  configure.ac
fuzzedpackages/landsepi/: DESCRIPTION  MD5  NAMESPACE  config.status  configure  configure.ac
fuzzedpackages/mmpca/: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
fuzzedpackages/tlrmvnmvt/: DESCRIPTION  INDEX  MD5  NAMESPACE  NEWS.md  README.md  cleanup  config.status  configure  configure.ac
jJ/icr/: DESCRIPTION  NAMESPACE  config.status  configure  configure.ac
(+34668 files in other folders)
